splitter yazısı eklendi ve sayfada ki konumu belirlendi. container'a gerekli genişlik verildi.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <title>Tip Calculator</title>
 </head>
 <body>
+    <img class="splitter" src="assets/icons/splitter.svg" alt="">
+
+    <div class="container">
+        
+    </div>
     
 </body>
 </html>
