Container'ın sağ bölümü tamamlandı. HTML ve Css işlemleri bitti. Hover ve diğer efektler kaldı. JS işlemlerine geçilecek...

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/tip-calculator.css">
     <script src="assets/js/tip-calculator.js" defer></script>
-    <script src="assets/js/hover-effects.js" defer></script>
+    <script src="assets/js/focus-effects.js" defer></script>
     <title>Tip Calculator</title>
 </head>
 <body>
@@ -49,7 +49,25 @@
                 </div>
             </div>
         </div>
-        <div class="right-side-container"></div>
+        <div class="right-side-container">
+            <div class="right-side-top-container">
+                <div class="right-side-input-container">
+                    <div class="heading-container">
+                        <h3 class="right-side-heading">Tip Amount</h3>
+                        <span>/ person</span>
+                    </div>
+                    <span class="result">$0.00</span>
+                </div>
+                <div class="right-side-input-container">
+                    <div class="heading-container">
+                        <h3 class="right-side-heading">Total</h3>
+                        <span>/ person</span>
+                    </div>
+                    <span class="result">$0.00</span>
+                </div>
+            </div>
+            <a href="#" class="reset-btn">RESET</a>
+        </div>
 
     </div>
     
