Input elemanı dinlenerek anlık olarak input a yazılan değer , total elemanına verilmesi işlemi yapıldı.

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
                         <h3 class="right-side-heading">Tip Amount</h3>
                         <span>/ person</span>
                     </div>
-                    <span class="result">$0.00</span>
+                    <span class="result" id="tip-amount-result">$0.00</span>
                 </div>
                 <div class="right-side-input-container">
                     <div class="heading-container">
                         <h3 class="right-side-heading">Total</h3>
                         <span>/ person</span>
                     </div>
-                    <span class="result">$0.00</span>
+                    <span class="result" id="total-result">$0.00</span>
                 </div>
             </div>
             <a href="#" class="reset-btn">RESET</a>
