--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
             <div class="select-tip-container">
                 <h3 class="heading">Select Tip %</h3>
                 <div class="discount-btn-container">
-                    <a href="#" class="discount-btn">5%</a>
-                    <a href="#" class="discount-btn">10%</a>
-                    <a href="#" class="discount-btn">15%</a>
-                    <a href="#" class="discount-btn">25%</a>
-                    <a href="#" class="discount-btn">50%</a>
+                    <a href="#" class="discount-btn" data-value="5">5%</a>
+                    <a href="#" class="discount-btn" data-value="10">10%</a>
+                    <a href="#" class="discount-btn" data-value="15">15%</a>
+                    <a href="#" class="discount-btn" data-value="25">25%</a>
+                    <a href="#" class="discount-btn" data-value="50">50%</a>
                     <input class="input-element" id="custom-discount" type="text" placeholder="Custom">
                 </div>
             </div>
