Reset butonunun işlevleri eklendi.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <span class="result" id="total-result">$0.00</span>
                 </div>
             </div>
-            <a href="#" class="reset-btn">RESET</a>
+            <a href="#" class="reset-btn not-active">RESET</a>
         </div>
 
     </div>
