JS işlemleri tamamlandı. Kod fazlalıklarından kurtulunda gerekli kodlar yerleştirildi. Reset butonu aktif edildi.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             </div>
             <div class="number-of-people-container">
                 <h3 class="heading">Number of People</h3>
+                <span class="zero">Can't be zero</span>
                 <div class="input-container">
                     <svg xmlns="http://www.w3.org/2000/svg" width="13" height="16" viewBox="0 0 13 16" fill="none">
                         <path d="M6.59852 7.70722C5.56736 7.70722 4.67445 7.32746 3.94488 6.5782C3.21532 5.82906 2.84548 4.91244 2.84548 3.85349C2.84548 2.7949 3.21532 1.87816 3.945 1.12878C4.67469 0.379758 5.56748 0 6.59852 0C7.62981 0 8.52248 0.379758 9.25204 1.1289C9.98161 1.87804 10.3516 2.79478 10.3516 3.85349C10.3516 4.91244 9.98161 5.82918 9.25192 6.57832C8.52224 7.32734 7.62945 7.70722 6.59852 7.70722Z" fill="#9EBBBD"/>
